src/app/globals.css
:root {
  --color-primary-50: oklch(96.9% 0.016 293.756);
  --color-primary-100: oklch(94.3% 0.029 294.588);
  --color-primary-200: oklch(89.4% 0.057 293.283);
  --color-primary-300: oklch(81.1% 0.111 293.571);
  --color-primary-400: oklch(70.2% 0.183 293.541);
  --color-primary-500: oklch(60.6% 0.25 292.717);
  --color-primary-600: oklch(54.1% 0.281 293.009);
  --color-primary-700: oklch(49.1% 0.27 292.581);
  --color-primary-800: oklch(43.2% 0.232 292.759);
  --color-primary-900: oklch(38% 0.189 293.745);
  --color-primary-950: oklch(28.3% 0.141 291.089);

  --color-secondary-50: oklch(94.81% 0.021 147.63);
  --color-secondary-100: oklch(87.14% 0.05 145.13);
  --color-secondary-200: oklch(79.03% 0.081 145.29);
  --color-secondary-300: oklch(71.37% 0.118 144.54);
  --color-secondary-400: oklch(65.66% 0.141 144.46);
  --color-secondary-500: oklch(60.41% 0.161 144.17);
  --color-secondary-600: oklch(56.23% 0.153 144.15);
  --color-secondary-700: oklch(51.02% 0.143 144.23);
  --color-secondary-800: oklch(45.69% 0.133 144.27);
  --color-secondary-900: oklch(35.88% 0.114 144.5);
  --color-secondary-950: oklch(26.2% 0.051 172.552);

  --color-teal-50: oklch(98.4% 0.014 180.72);
  --color-teal-100: oklch(95.3% 0.051 180.801);
  --color-teal-200: oklch(91% 0.096 180.426);
  --color-teal-300: oklch(85.5% 0.138 181.071);
  --color-teal-400: oklch(77.7% 0.152 181.912);
  --color-teal-500: oklch(70.4% 0.14 182.503);
  --color-teal-600: oklch(60% 0.118 184.704);
  --color-teal-700: oklch(51.1% 0.096 186.391);
  --color-teal-800: oklch(43.7% 0.078 188.216);
  --color-teal-900: oklch(38.6% 0.063 188.416);
  --color-teal-950: oklch(27.7% 0.046 192.524);

  --color-orange-50: oklch(98% 0.016 73.684);
  --color-orange-100: oklch(95.4% 0.038 75.164);
  --color-orange-200: oklch(90.1% 0.076 70.697);
  --color-orange-300: oklch(83.7% 0.128 66.29);
  --color-orange-400: oklch(75% 0.183 55.934);
  --color-orange-500: oklch(70.5% 0.213 47.604);
  --color-orange-600: oklch(64.6% 0.222 41.116);
  --color-orange-700: oklch(55.3% 0.195 38.402);
  --color-orange-800: oklch(47% 0.157 37.304);
  --color-orange-900: oklch(40.8% 0.123 38.172);
  --color-orange-950: oklch(26.6% 0.079 36.259);

  --color-rose-50: oklch(96.9% 0.015 12.422);
  --color-rose-100: oklch(94.1% 0.03 12.58);
  --color-rose-200: oklch(89.2% 0.058 10.001);
  --color-rose-300: oklch(81% 0.117 11.638);
  --color-rose-400: oklch(71.2% 0.194 13.428);
  --color-rose-500: oklch(64.5% 0.246 16.439);
  --color-rose-600: oklch(58.6% 0.253 17.585);
  --color-rose-700: oklch(51.4% 0.222 16.935);
  --color-rose-800: oklch(45.5% 0.188 13.697);
  --color-rose-900: oklch(41% 0.159 10.272);
  --color-rose-950: oklch(27.1% 0.105 12.094);

  --color-grey-50: oklch(98.4% 0.003 247.858);
  --color-grey-100: oklch(96.8% 0.007 247.896);
  --color-grey-200: oklch(92.9% 0.013 255.508);
  --color-grey-300: oklch(86.9% 0.022 252.894);
  --color-grey-400: oklch(70.4% 0.04 256.788);
  --color-grey-500: oklch(55.4% 0.046 257.417);
  --color-grey-600: oklch(44.6% 0.043 257.281);
  --color-grey-700: oklch(37.2% 0.044 257.287);
  --color-grey-800: oklch(27.9% 0.041 260.031);
  --color-grey-900: oklch(20.8% 0.042 265.755);
  --color-grey-950: oklch(12.9% 0.042 264.695);

  /* Souped up easing functions */
  --ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
  --ease-in: cubic-bezier(0.75, 0, 1, 1);
  --ease-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
  --ease: cubic-bezier(0.44, 0.21, 0, 1);

  /* This is already defined in the metadata,
  but LightningCSS requires it to be defined here too for light-dark to work properly */
  color-scheme: dark light;
}

html[data-theme="dark"] {
  color-scheme: dark;
}

html[data-theme="light"] {
  color-scheme: light;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  font-family: var(--font-lexend), Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.6;
  color: light-dark(var(--color-grey-900), var(--color-grey-50));
  background: light-dark(var(--color-grey-100), var(--color-grey-800));
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@keyframes fadeFromOpaque {
  from {
    opacity: 1;
  }
}

@keyframes fadeToOpaque {
  to {
    opacity: 1;
  }
}

@keyframes fadeFromTransparent {
  from {
    opacity: 0;
  }
}

@keyframes fadeToTransparent {
  to {
    opacity: 0;
  }
}

@keyframes disperse {
  to {
    transform: translate(var(--x), var(--y));
  }
}

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

